
2010-10-02
Initial folders and text files
Imported code from AjAgents-0.1
Converted to VS2008
New IAgent<T>
AgentQueue<T> with tests
Agent<T> with tests
AjAgents.Console is a WebCrawler
Removing AjAgents.ConsoleTest01