@@ -10,7 +10,7 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution 
 		LocalTestRun.testrunconfig = LocalTestRun.testrunconfig
 	EndProjectSection
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjAgents.Console", "AjAgents.Console\AjAgents.Console.csproj", "{87A24EB3-D890-481F-A3FC-1A82C0CA3EB5}"
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjAgents.WebCrawler", "AjAgents.WebCrawler\AjAgents.WebCrawler.csproj", "{87A24EB3-D890-481F-A3FC-1A82C0CA3EB5}"
 EndProject
 Global
 	GlobalSection(TestCaseManagementSettings) = postSolution
